tests/lean/shadow.lean.expected.out
shadow.lean:6:0: error: type mismatch
  h
has type
  x✝ = x✝
but is expected to have type
  x = x
failed to synthesize instance
  CoeT (x✝ = x✝) h (x = x)
shadow.lean:10:0: error: type mismatch
  h
has type
  x = x
but is expected to have type
  x = x
failed to synthesize instance
  CoeT (x = x) h (x = x)
shadow.lean:13:0: error: don't know how to synthesize placeholder
context:
α : Type u_1
inst✝¹ : Inhabited α
inst✝ inst : α
β✝ δ✝ : Type
⊢ α → β✝ → δ✝ → α × β✝ × δ✝
shadow.lean:17:0: error: don't know how to synthesize placeholder
context:
α : Type u_1
inst.68 : Inhabited α
inst inst : α
β.93 δ.94 : Type
⊢ α → β.93 → δ.94 → α × β.93 × δ.94
shadow.lean:20:0: error: don't know how to synthesize placeholder
context:
α : Type u_1
β : Sort u_2
inst✝² : α
inst✝¹ b : β
inst : α
inst✝ : Inhabited α
β✝ δ✝ : Type
⊢ α → β✝ → δ✝ → α × β✝ × δ✝
